// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MDirectExperimentsList can add new item 1`] = `
Object {
  "experiments": Array [
    Object {
      "active": false,
      "counters": Array [],
      "grants": Array [],
      "id": null,
      "name": "эксперимент",
      "permission": "own",
      "savingState": "",
      "segments": Array [],
    },
  ],
  "isEditable": true,
  "searchString": "",
  "state": "success",
}
`;

exports[`MDirectExperimentsList can search by experiments 1`] = `
Array [
  Object {
    "active": false,
    "counters": Array [],
    "grants": Array [],
    "id": 12345,
    "name": "Эксперимент",
    "permission": "",
    "savingState": "",
    "segments": Array [],
  },
]
`;

exports[`MDirectExperimentsList can search by experiments 2`] = `
Array [
  Object {
    "active": false,
    "counters": Array [],
    "grants": Array [],
    "id": 67890,
    "name": "qweqwe",
    "permission": "",
    "savingState": "",
    "segments": Array [],
  },
]
`;

exports[`MDirectExperimentsList can search by experiments 3`] = `
Array [
  Object {
    "active": false,
    "counters": Array [],
    "grants": Array [],
    "id": 12345,
    "name": "Эксперимент",
    "permission": "",
    "savingState": "",
    "segments": Array [],
  },
]
`;

exports[`MDirectExperimentsList can search by experiments 4`] = `
Array [
  Object {
    "active": false,
    "counters": Array [],
    "grants": Array [],
    "id": 67890,
    "name": "qweqwe",
    "permission": "",
    "savingState": "",
    "segments": Array [],
  },
]
`;

exports[`MDirectExperimentsList works with default params 1`] = `
Object {
  "experiments": Array [],
  "isEditable": true,
  "searchString": "",
  "state": "success",
}
`;
